--- a/main.css
+++ b/main.css
@@ -5,6 +5,12 @@
     grid-auto-flow : column;
 
     border-right : 2px solid black;
+    margin-left : auto;
+    margin-right: auto;
+}
+
+#main_input{
+
 }
 
 .cell{
@@ -13,4 +19,11 @@
     border-top : 2px solid black;
     border-bottom: 2px solid black;
     border-left: 2px solid black;
+}
+
+.content{
+    max-width 500px;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
 }
