--- a/main.css
+++ b/main.css
@@ -10,7 +10,8 @@
 }
 
 #main_input{
-
+    resize : none;
+    overflow: hidden;
 }
 
 .cell{
@@ -26,4 +27,9 @@
     margin-left:auto;
     margin-right:auto;
     text-align:center;
+}
+
+p{
+    margin-top: 0px;
+    margin-bottom: 5px;
 }
